LongestPathFrom and LongestSpanningGraph
- Added Graph.longestPathFrom
- Added Graph.longestSpanningPath
- slight modifications to improve readability